<resources>
    <string name="app_name">FPO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="village">Village</string>
    <string name="acreage">Acreage</string>
    <string name="main_crops">Main crops</string>
    <string name="query_hint">Search FPO members by name, crop, village etc</string>
    <string name="membership">Membership</string>
    <string name="profile_image">ProfileImage</string>
    <string name="bod">BOD</string>
    <string name="staffs">Staffs</string>
    <string name="add_member">Add Member</string>
    <string name="basic_profile">Basic Profile</string>
    <string name="farm">Farm</string>
    <string name="live_stock">Livestock</string>
    <string name="assests">Assests</string>
    <string name="house_hold">House Hold</string>
    <string name="bank">Bank</string>
    <string name="save"><u>Save</u></string>
    <string name="_firstname">First Name</string>
    <string name="_lastname">Last Name</string>
    <string name="_dob">DOB</string>
    <string name="_gender">Gender</string>
    <string name="_address">Address</string>
    <string name="_district">District</string>
    <string name="_state">State</string>
    <string name="_pincode">Pincode</string>
    <string name="_contact">Contact Phone</string>
    <string name="_phonenum">Phone num</string>
    <string name="profile_photo">Profile photo</string>
    <string name="_smartphone">Smart Phone</string>
    <string name="choose_file"><u>Choose File</u></string>
    <string name="_proof">Proof</string>
    <string name="_address_proof">Address Proof</string>
    <string name="_identity_proof">Identity Proof</string>
    <string name="_upload_files">Upload Files</string>
    <string name="_member">Member</string>
    <string name="_plot_acreage">Plot Acreage</string>
    <string name="_upload">Upload</string>
    <string name="_plot_geolocation_file">Plot Geolocation File</string>
    <string name="_livestock_type">Livestock Type</string>
    <string name="_livestock_breed">Livestock Breed</string>
    <string name="_livestock_count">Livestock Count</string>
    <string name="_livestock_average_age">Livestock Average Age</string>
    <string name="_livestock_insurance">Livestock Insurance</string>
    <string name="_asset_type">Assest Type</string>
    <string name="_aquired_on">Aquired On</string>
    <string name="_assest_status">Assest Status</string>
    <string name="_area_of_the_plot">Area of the plot</string>
    <string name="_assest_quantity">Asset Quantity</string>
    <string name="_description">Description</string>
    <string name="_custom_hire_availability">Custom Hire Availability</string>
    <string name="_location">Location</string>
    <string name="_relavent_images">Relavant Images</string>
    <string name="_male_members">Male Members</string>
    <string name="_female_members">Female Members</string>
    <string name="_bank_name">Bank Name</string>
    <string name="_bank_branch">Bank Branch</string>
    <string name="_account_type">Account Type</string>
    <string name="_account_number">Account Number</string>
    <string name="_ifsc">IFSC</string>
    <string name="_passbook">Check/Passbook image</string>
    <string name="_rabbi_crops">Select Rabi Crops (October - March)</string>
    <string name="_kharif_crops">Select Kharif Crops (July - October)</string>
</resources>