<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12dp"
    app:cardCornerRadius="@dimen/_2dp"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_farm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_52dp"
        android:background="@color/light_blue"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/farm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_14dp"
            android:layout_marginBottom="@dimen/_19dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            android:text="@string/farm"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/farm_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24dp"
            android:paddingTop="@dimen/_24dp"
            android:src="@drawable/dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/farm_title"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_farmdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_17dp"
        android:background="@color/white"
        android:padding="@dimen/_16dp">

        <TextView
            android:id="@+id/farmcardtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14dp"
            android:layout_marginBottom="@dimen/_19dp"
            android:gravity="center_vertical"
            android:text="@string/farm"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:layout_marginEnd="@dimen/_35dp"
            android:gravity="center_vertical"
            android:text="@string/save"
            android:textColor="@color/drak_green"
            android:textSize="@dimen/_20sp"
            app:layout_constraintRight_toLeftOf="@+id/farm_uparrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/farm_uparrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_6dp"
            android:paddingTop="@dimen/_16dp"
            android:src="@drawable/uparrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/farmcardtitle"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:gravity="center_vertical"
            android:text="@string/_member"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintTop_toBottomOf="@id/farmcardtitle"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/manadatory_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:paddingStart="@dimen/_8dp"
            android:src="@drawable/manadatory"
            app:layout_constraintLeft_toRightOf="@+id/txt_member"
            app:layout_constraintTop_toBottomOf="@id/farmcardtitle" />
        <RelativeLayout
            android:id="@+id/member_relative_layout"
            android:layout_width="@dimen/_300dp"
            android:layout_height="@dimen/_45dp"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/custom_edittext"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/_10dp"
            android:paddingStart="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@id/txt_member"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp">
            <Spinner
                android:id="@+id/edt_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_minus15dp"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:spinnerMode="dropdown" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingEnd="@dimen/_8dp"
                android:src="@drawable/dropdown" />

        </RelativeLayout>



        <TextView
            android:id="@+id/txt_plot_acreage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:gravity="center_vertical"
            android:text="@string/_plot_acreage"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintTop_toBottomOf="@id/member_relative_layout"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edt_plot_acreage"
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_45dp"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/custom_edittext"
            android:gravity="center_vertical"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_16dp"
            app:layout_constraintTop_toBottomOf="@id/txt_plot_acreage"
            tools:ignore="LabelFor,MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/txt_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:gravity="center_vertical"
            android:text="@string/_upload"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintTop_toBottomOf="@id/edt_plot_acreage"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/txt_geolocation_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:gravity="center_vertical"
            android:text="@string/_plot_geolocation_file"
            android:textColor="@color/gray"
            android:textSize="@dimen/_16sp"
            app:layout_constraintTop_toBottomOf="@id/txt_upload"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/upload_plot_geolocationfile"
            android:layout_width="@dimen/_300dp"
            android:layout_height="@dimen/_45dp"
            android:layout_marginTop="@dimen/_8dp"
            android:autofillHints="@string/_identity_proof"
            android:background="@drawable/dotted_border"
            android:drawableStart="@drawable/upload_icon"
            android:drawableLeft="@drawable/upload_icon"
            android:gravity="center_vertical"
            android:inputType="none"
            android:paddingStart="@dimen/_100dp"
            android:paddingEnd="@dimen/_50dp"
            android:text="@string/_upload_files"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/txt_geolocation_file"
            tools:ignore="LabelFor,MissingConstraints,RtlCompat"
            tools:layout_editor_absoluteX="16dp" />
        <TextView
            android:id="@+id/txt_rabi_crops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:gravity="center_vertical"
            android:text="@string/_rabbi_crops"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/upload_plot_geolocationfile"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />
        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_14dp"
            android:id="@+id/rabi_constraint_layout"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/txt_rabi_crops">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/farm_rabi_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/txt_kharfi_crops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:gravity="center_vertical"
            android:text="@string/_kharif_crops"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/rabi_constraint_layout"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />
        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_14dp"
            android:id="@+id/kharfi_constraint_layout"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/txt_kharfi_crops">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/farm_kharfi_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/txt_farm_livestock_crops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:gravity="center_vertical"
            android:text="@string/live_stock"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/kharfi_constraint_layout"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />
        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_14dp"
            android:id="@+id/farm_livestock_constraint_layout"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/txt_farm_livestock_crops">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/farm_livestock_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
       </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
